--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <img src="bismass.jpg" height="250px" width="550px">
 
         <h1>TrySail布教ページ</h1>
-        <h3>他の人にオススメしたいものがあれば<a href="https://twitter.com/ama_sera">こちら</a>まで送ってください</h3>
+        <h3>他の人にオススメしたいものがあれば<br><a href="https://twitter.com/ama_sera">こちら</a>まで送ってください</h3>
 
         <p>今月の曲<a href="https://www.youtube.com/watch?v=nvhUfef6Ykc">秘密のアフレイド</a></p>
 
